[gd_scene load_steps=5 format=3 uid="uid://i0lm674wosh7"]

[ext_resource type="Script" path="res://level_components/breaking_platform.gd" id="1_vkdko"]
[ext_resource type="Texture2D" uid="uid://d24kl3vtfirna" path="res://colored-transparent_packed.png" id="2_4b1as"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xacor"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70try"]
size = Vector2(32, 3)

[node name="BreakingPlatform" type="StaticBody2D"]
script = ExtResource("1_vkdko")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_4b1as")
hframes = 49
vframes = 22
frame = 1077

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xacor")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -17.5)
shape = SubResource("RectangleShape2D_70try")

[node name="DeactivationTimer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
